JumpScript/tests/baselines/reference/parserVariableDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration8.jump(1,4): error TS1123: Variable declaration list cannot be empty.


==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration8.jump (1 errors) ====
    var ;
       
!!! error TS1123: Variable declaration list cannot be empty.